--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://srvrpaginaweb.mysql.database.azure.com:3306/ecommerce
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=administrador
+spring.datasource.password=Otrojas4$%&
 
 
 spring.jpa.hibernate.ddl-auto=update
