--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+			<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+		<dependency>
+		    <groupId>com.cloudinary</groupId>
+		    <artifactId>cloudinary-http44</artifactId>
+		    <version>1.24.0</version>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
